--- a/frontend/views/login.hbs
+++ b/frontend/views/login.hbs
@@ -2,7 +2,7 @@
 {{#> layout}}
     <div class="container">
         <h2>Login</h2>
-        <form action="/login" method="POST" class="login-form">
+        <form id="login-form" class="login-form">
             <label for="email">E-mail:</label>
             <input type="email" id="email" name="email" required placeholder="Digite seu e-mail">
             
@@ -12,6 +12,7 @@
             <button type="submit" class="btn">Entrar</button>
         </form>
         
-        <p class="register-link">Ainda não tem uma conta? <a href="/register">Cadastre-se</a></p>
+        <p class="link">Ainda não tem uma conta? <a href="/register">Cadastre-se</a></p>
     </div>
+    <script src="/script/login.js"></script>
 {{/layout}}
